--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./ds1.zip">ds1</a>
-    <a href="./t.java">t.java</a>
-    <a href="./x1.zip">x1</a>
+    <a href="./all.zip">ds1</a>
 </body>
 </html>
